# cook

./: .gitignore  .tool-versions  1-instructions.txt  3-cheese-macaroni.example.json  3-cheese-macaroni.txt  Cargo.toml  README.md  README.txt  apple-cider.cook  apple_cider.md  baked-salmon.txt  banana-bread.txt  build.sh  holiday-stuffing.txt  index.hbs  index.html  lasagne.md  lasagne.txt  mooshoo-pork-tacos.txt  pesto.example.json  pesto.txt  pizza.txt  recipes  release  ribs.cook  ribs.txt  shoyu-tare.txt  shrimp-curry.txt  smothered-porkchops.txt  snicker_doodle.md  snicker_doodle.txt  soy-marinated-steak-stirfry.txt  turkey-burgers.txt  turkey-pot-pie.txt
build-app/src/: main.rs  parse.rs
code/build-app/: Cargo.toml  manifest.json
code/build-app/src/: main.rs
code/cook_ex/: .gitignore  README.md  mix.exs
code/cook_ex/lib/: cook.ex  decoder.ex  parser.ex
code/cook_ex/lib/decoder/: helpers.ex
code/cook_ex/lib/parser/: helpers.ex
code/cook_ex/test/: cook_test.exs  decoder_test.exs  parser_test.exs
code/cook_ex/test/fixtures/: apple-cider.txt  pesto.txt
code/parse-cook/src/: main.rs
parse-cook/: Cargo.toml
parse-cook/src/: main.rs
recipes/: banana-bread.txt  chashu-pork-belly.txt  mango-salsa.txt  meatloaf-burgers.txt  miso-tare.txt  pancakes.txt  ramen-noodles.txt  shoyu-tare.txt  spicy-miso-tare.txt
src/: app.rs  main.rs
